fix: cards grid on tablets missing one post

--- a/src/index.scss
+++ b/src/index.scss
@@ -64,7 +64,7 @@ body {
   }
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 1280px) {
   .card:nth-child(7n + 1) {
     grid-column: auto/span 2;
     grid-row: auto/span 2;
